Upgrade to JTE datastar library 0.1.3