@@ -1,7 +1,6 @@
 package io.github.gadnex.datastarspringmvc.todos;
 
 import io.github.gadnex.jtedatastar.Datastar;
-import io.github.gadnex.jtedatastar.EmitException;
 import io.github.gadnex.jtedatastar.MergeMode;
 import jakarta.validation.Valid;
 import java.util.*;
@@ -15,6 +14,7 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.View;
 import org.springframework.web.servlet.mvc.method.annotation.SseEmitter;
 
 @Controller
@@ -25,11 +25,12 @@ public class ToDoController {
 
   private static final Map<UUID, ToDo> TODOS = new HashMap<>();
 
-  private static final ExecutorService EXECUTOR = Executors.newCachedThreadPool();
+  private static final ExecutorService EXECUTOR = Executors.newVirtualThreadPerTaskExecutor();
 
   private static final Set<SseEmitter> connections = new HashSet<>();
 
   private final Datastar datastar;
+  private final View error;
 
   @GetMapping
   public String todos(Model model) {
@@ -40,6 +41,10 @@ public class ToDoController {
   @GetMapping(value = "connect", headers = "Datastar-Request")
   public SseEmitter connect() {
     SseEmitter sseEmitter = new SseEmitter(-1L);
+    sseEmitter.onError(
+        (error) -> {
+          connections.remove(sseEmitter);
+        });
     sseEmitter.onCompletion(
         () -> {
           connections.remove(sseEmitter);
@@ -81,31 +86,22 @@ public class ToDoController {
   }
 
   private void reloadAddToDoForm(BindingResult bindingResult, SseEmitter sseEmitter) {
-    try {
-      datastar
-          .mergeFragments(sseEmitter)
-          .template("todos/AddToDoForm", LocaleContextHolder.getLocale())
-          .attribute("result", bindingResult)
-          .emit();
-    } catch (EmitException ex) {
-      log.error(ex.getMessage(), ex);
-    } finally {
-      sseEmitter.complete();
-    }
+    datastar
+        .mergeFragments(sseEmitter)
+        .template("todos/AddToDoForm", LocaleContextHolder.getLocale())
+        .attribute("result", bindingResult)
+        .emit();
+    sseEmitter.complete();
   }
 
   private void addToDoItemToAllClients(ToDo todo) {
-    try {
-      datastar
-          .mergeFragments(connections)
-          .template("todos/ToDoListItem")
-          .attribute("todo", todo)
-          .selector("#todo-list")
-          .mergeMode(MergeMode.PREPEND)
-          .emit();
-    } catch (EmitException ex) {
-      removeConnections(ex.emitters());
-    }
+    datastar
+        .mergeFragments(connections)
+        .template("todos/ToDoListItem")
+        .attribute("todo", todo)
+        .selector("#todo-list")
+        .mergeMode(MergeMode.PREPEND)
+        .emit();
   }
 
   @PutMapping(value = "/{id}/", headers = "Datastar-Request")
@@ -119,22 +115,12 @@ public class ToDoController {
           } else {
             ToDo updatedTodo = new ToDo(todo.id(), todo.text(), !todo.done());
             TODOS.put(id, updatedTodo);
-            try {
-              datastar
-                  .mergeFragments(connections)
-                  .template("todos/ToDoListItem")
-                  .attribute("todo", updatedTodo)
-                  .emit();
-            } catch (EmitException ex) {
-              removeConnections(ex.emitters());
-            }
+            datastar
+                .mergeFragments(connections)
+                .template("todos/ToDoListItem")
+                .attribute("todo", updatedTodo)
+                .emit();
           }
         });
-  }
-
-  private void removeConnections(Set<SseEmitter> sseEmitters) {
-    for (SseEmitter sseEmitter : sseEmitters) {
-      connections.remove(sseEmitter);
-    }
   }
 }
